==> timurey/oryx_stm32f205/src/onewire/onewire.c <==
#include "onewire.h"
#include <ctype.h>
#include "stdio.h"
#include "string.h"
#define OW_0	0x00
#define OW_1	0xff
#define OW_R_1	0xff

uint8_t OW_Reset(void) {
   uint8_t ow_presence=0xf0;

   UartHandle.Init.BaudRate = 9600;

   HAL_HalfDuplex_Init(&UartHandle);

   // отправляем 0xf0 на скорости 9600
   HAL_UART_Transmit(&UartHandle, &ow_presence, 1, 10);

   while (UartHandle.State != HAL_UART_STATE_READY) {
#ifdef OW_GIVE_TICK_RTOS
      taskYIELD();
#endif
   }
   HAL_UART_Receive(&UartHandle,&ow_presence,1,10);

   UartHandle.Init.BaudRate = 115200;
   HAL_HalfDuplex_Init(&UartHandle);

   if (ow_presence != 0xf0) {
      return OW_OK;
   }

   return OW_NO_DEVICE;
}

static void OW_SendBits(uint8_t num_bits) {

   HAL_UART_Receive_DMA(&UartHandle, (uint8_t *)ow_buf, num_bits);

   HAL_UART_Transmit_DMA(&UartHandle, (uint8_t *)ow_buf, num_bits);

   while (UartHandle.State != HAL_UART_STATE_READY) {
#ifdef OW_GIVE_TICK_RTOS
      taskYIELD();
#endif
   }

}

uint8_t OW_Send(uint8_t sendReset, uint8_t *command, uint8_t cLen,
   uint8_t *data, uint8_t dLen, uint8_t readStart) {

   // если требуется сброс - сбрасываем и проверяем на наличие устройств
   if (sendReset == OW_SEND_RESET) {
      if (OW_Reset() == OW_NO_DEVICE) {
         return OW_NO_DEVICE;
      }
   }

   while (cLen > 0) {

      OW_toBits(*command, ow_buf);
      command++;
      cLen--;

      OW_SendBits(8);

      // если прочитанные данные кому-то нужны - выкинем их в буфер
      if (readStart == 0 && dLen > 0) {
         *data = OW_toByte(ow_buf);
         data++;
         dLen--;
      } else {
         if (readStart != OW_NO_READ) {
            readStart--;
         }
      }
   }

   return OW_OK;
}

uint8_t OW_Scan(OwSerial_t *buf, uint8_t num) {

   uint8_t found = 0;
   uint8_t *lastDevice;
   uint8_t *curDevice = &buf->serial[0];
   uint8_t numBit, lastCollision, currentCollision, currentSelection;

   lastCollision = 0;
   while (found < num) {
      numBit = 1;
      currentCollision = 0;

      // посылаем команду на поиск устройств
      OW_Send(OW_SEND_RESET, (uint8_t*)"\xf0", 1, 0, 0, OW_NO_READ);

      for (numBit = 1; numBit <= 64; numBit++) {
         // читаем два бита. Основной и комплементарный
         OW_toBits(OW_READ_SLOT, ow_buf);
         OW_SendBits(2);

         if (ow_buf[0] == OW_R_1) {
            if (ow_buf[1] == OW_R_1) {
               // две единицы, где-то провтыкали и заканчиваем поиск
               return found;
            } else {
               // 10 - на данном этапе только 1
               currentSelection = 1;
            }
         } else {
            if (ow_buf[1] == OW_R_1) {
               // 01 - на данном этапе только 0
               currentSelection = 0;
            } else {
               // 00 - коллизия
               if (numBit < lastCollision) {
                  // идем по дереву, не дошли до развилки
                  //todo: check this code (operand &)
                  if (lastDevice[(numBit - 1) >> 3]
                                 & 1 << ((numBit - 1) & 0x07)) {
                     // (numBit-1)>>3 - номер байта
                     // (numBit-1)&0x07 - номер бита в байте
                     currentSelection = 1;

                     // если пошли по правой ветке, запоминаем номер бита
                     if (currentCollision < numBit) {
                        currentCollision = numBit;
                     }
                  } else {
                     currentSelection = 0;
                  }
               } else {
                  if (numBit == lastCollision) {
                     currentSelection = 0;
                  } else {
                     // идем по правой ветке
                     currentSelection = 1;

                     // если пошли по правой ветке, запоминаем номер бита
                     if (currentCollision < numBit) {
                        currentCollision = numBit;
                     }
                  }
               }
            }
         }

         if (currentSelection == 1) {
            curDevice[(numBit - 1) >> 3] |= 1 << ((numBit - 1) & 0x07);
            OW_toBits(0x01, ow_buf);
         } else {
            curDevice[(numBit - 1) >> 3] &= ~(1 << ((numBit - 1) & 0x07));
            OW_toBits(0x00, ow_buf);
         }
         OW_SendBits(1);
      }
      found++;
      lastDevice = curDevice;
      curDevice += 8;
      if (currentCollision == 0)
         return found;

      lastCollision = currentCollision;
   }

   return found;
}
